fixed alignment issues with cart items and updated README

--- a/style.css
+++ b/style.css
@@ -119,7 +119,8 @@ h2{
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    margin-top: 25px;
+    width: 100%;
+    margin: 25px 0 25px 0;
 }
 
 .cart-img{
@@ -164,4 +165,14 @@ h2{
     height: 40px;
     text-align: center;
     font-size: 16px;
+}
+
+.container{
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+}
+
+.cart-name{
+    width: 90px;
 }
